--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "jquery": "^3.7.1",
         "popper": "^1.0.1",
         "popper.js": "^1.16.1"
