--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "dependencies": {
         "@popperjs/core": "^2.11.8",
         "jquery": "^3.7.1",
-        "popper": "^1.0.1",
-        "popper.js": "^1.16.1"
+        "popper": "^1.0.1"
     }
 }
